--- a/fruit.ipynb
+++ b/fruit.ipynb
@@ -357,7 +357,7 @@
         "    first_images[category] = train_df[train_df['Label'] == category]['Filepath'].values[0]\n",
         "\n",
         "plt.figure(figsize=(15,10))\n",
-        "for i, (category, image_path) in enumerate(first_images.items()):\n",
+        "for i,(category,image_path) in enumerate(first_images.items()):\n",
         "    image = Image.open(image_path)\n",
         "    plt.subplot(6,6,i+1) # i+1 是因為 subplot 從 1 開始\n",
         "    plt.imshow(image)\n",
@@ -692,7 +692,7 @@
         "result = pd.DataFrame(history.history)\n",
         "\n",
         "# 創建子圖\n",
-        "fig, axes = plt.subplots(1,2,figsize=(15, 5))\n",
+        "fig,axes = plt.subplots(1,2,figsize=(15,5))\n",
         "\n",
         "# 繪製準確率曲線\n",
         "result[['accuracy','val_accuracy']].plot(ax=axes[0])\n",
@@ -744,7 +744,7 @@
         "label_map = train_generator.class_indices\n",
         "\n",
         "# 反轉字典以便於查詢\n",
-        "label_map = {v:k for k, v in label_map.items()}\n",
+        "label_map = {v:k for k,v in label_map.items()}\n",
         "\n",
         "# 顯示標籤對應表\n",
         "print(label_map)"
